--- a/myApp/www/templates/contact.html
+++ b/myApp/www/templates/contact.html
@@ -1,6 +1,7 @@
 <ion-view view-title="Contact">>
 
-  <ion-content>
+  <ion-content><img class="sensatielogopaginas" src="img/sensatielogoo.jpg" alt="">
+     <h4 class="pagetitles" >Contact informatie:</h4>
     <div class="contact-container">
     <hp>Sensatie Reizen – Voetbalsensatie<br>
 Telefoon: +316 53 69 51 83<br>
