--- a/myApp/www/templates/home.html
+++ b/myApp/www/templates/home.html
@@ -11,9 +11,9 @@
          <ion-slide>
              <img class="slide1" src="img/city.jpg">
          </ion-slide>
-         <ion-slide>
+         <!--<ion-slide>
              <img class="slide1" src="img/cristiano-ronaldo.jpg">
-         </ion-slide>
+         </ion-slide>-->
        </ion-slide-box>
 </ion-content>
 <ion-footer-bar align-title="left" class="bar-assertive">
