--- a/myApp/www/templates/account.html
+++ b/myApp/www/templates/account.html
@@ -1,25 +1,26 @@
 <ion-view view-title="Account" hide-back-button="true">
-  	<ion-content>
+  	<ion-content> <img class="sensatielogopaginas" src="img/sensatielogoo.jpg" alt="">
+	  
 		<span ng-show="check.email">
-	<h4 class="pagetitles" >  {{ check.email }}</h4>
+	<h4 class="pagetitles" > Welkom {{ check.email }} !</h4>
 		</span>
 
-
-	<button class="button button-block">	Reset Wachtwoord </button>
-	  		   <h4 class="pagetitles" >------------  &nbsp;&nbsp;uw gegevens&nbsp;&nbsp;  ------------</h4>
-		<div class="containerlogin">
-
-	  	<h5>Oud Wachtwoord: </h5>
+<br>
+	
+	  		   
+		<div class="containeraccount">
+<h4 >Verander hier uw wachtwoord</h4>
+	  	
 
 	  	 <label class="item item-input">
         <input type="password" ng-model="reset.oldPassword" placeholder="Oud wachtwoord:">
       </label>
 
-	  <h5>	Nieuw wachtwoord: </h5>
+	 
 	  	 <label class="item item-input">
         <input type="password" ng-model="reset.newPassword" placeholder="Nieuw wachtwoord:">
       </label>
-	  		  	<button id="geenAccount" class="button button-clear button-positive" ng-click="logout()">Uitloggen</button>
+	  		  	<button id="uitloggen" class="button button-clear button-positive" ng-click="logout()">Uitloggen</button>
 
 
 	  	<button  id="wachtwoordvergeten" class="button button-clear button-assertive" ng-click="resetPassword()">Reset wachtwoord</button>
