--- a/myApp/www/templates/teaminfo.html
+++ b/myApp/www/templates/teaminfo.html
@@ -2,7 +2,7 @@
   <ion-nav-title>Marktwaarde</ion-nav-title>
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="t in teams.teams"><img class="logoclub" ng-src="{{t.crestUrl}}"><div class="teamname"> {{t.name}} </div>  <div class="marketvalue">  {{t.squadMarketValue}} </div></ion-item>
+      <ion-item ng-repeat="t in team.teams"><img class="logoclub" ng-src="{{t.crestUrl}}"><div class="teamname"> {{t.name}} </div>  <div class="marketvalue">  {{t.squadMarketValue}} </div></ion-item>
    </ion-list>
   </ion-content>
 </ion-view>
