--- a/myApp/www/templates/teamfinished.html
+++ b/myApp/www/templates/teamfinished.html
@@ -14,13 +14,13 @@ Gespeeld
    
     <tr>
     
-      <td class="clubnamen" > {{team.homeTeamName}}</td>
+      <td class="clubnamengespeeld" > {{team.homeTeamName}}</td>
       <td class="grotevanvakjes">{{team.result.goalsHomeTeam}} </td>
        <td class="grotevanvakjes"> - </td>
       
       <td class="grotevanvakjes">{{team.result.goalsAwayTeam}}</td>
-      <td class="clubnamen" >{{team.awayTeamName}} </td>
-      <td class="grotevanvakjes">{{team.date}} </td>
+      <td class="clubnamengespeeld" >{{team.awayTeamName}} </td>
+      <td class="datumgespeeld">{{team.date}} </td>
       
     </tr>
   
