--- a/myApp/www/templates/teamfinished.html
+++ b/myApp/www/templates/teamfinished.html
@@ -16,7 +16,7 @@ Gespeeld
     
       <td class="clubnamengespeeld" > {{team.homeTeamName}}</td>
       <td class="grotevanvakjes">{{team.result.goalsHomeTeam}} </td>
-       <td class="grotevanvakjes"> - </td>
+       <td class="grotevanvakjesstreep"> - </td>
       
       <td class="grotevanvakjes">{{team.result.goalsAwayTeam}}</td>
       <td class="clubnamengespeeld" >{{team.awayTeamName}} </td>
