--- a/myApp/www/templates/teaminplay.html
+++ b/myApp/www/templates/teaminplay.html
@@ -1,13 +1,47 @@
 <ion-view>
       <ion-nav-title>
-Programma
+Live Wedstrijden
     </ion-nav-title>
   <ion-content>
     <ion-list>
 
-      <ion-item ng-repeat="team in isActive"> <p class="homeawayteam" > {{team.homeTeamName}} - {{team.awayTeamName}}  </p> <p class="teamdate"> {{team.result}} 
-		   </p> </ion-item>
+    <!--  <ion-item ng-repeat="team in isActive">-->
+      
+       
+        
+         
+          
+           
+      <ion-item class="itemsbuiten" ng-repeat="team in isFinished">
+     
+      
+       
+         <div style="overflow-x:auto;">
+  <table>
+   
+    <tr>
+    
+      <td class="clubnamengespeeld" > {{team.homeTeamName}}</td>
+      <td class="grotevanvakjes">{{team.result.goalsHomeTeam}} </td>
+       <td class="grotevanvakjes"> - </td>
+      
+      <td class="grotevanvakjes">{{team.result.goalsAwayTeam}}</td>
+      <td class="clubnamengespeeld" >{{team.awayTeamName}} </td>
+   
+      
+    </tr>
+  
+   
+  </table>
+</div>
+         
+          
+		   
+		   
+		   
+		   </ion-item>
 
    </ion-list>
   </ion-content>
 </ion-view>
+sd
