documentatie + groen score

--- a/myApp/www/templates/teaminplay.html
+++ b/myApp/www/templates/teaminplay.html
@@ -22,10 +22,10 @@ Live Wedstrijden
     <tr>
     
       <td class="clubnamengespeeld" > {{team.homeTeamName}}</td>
-      <td class="grotevanvakjes">{{team.result.goalsHomeTeam}} </td>
+      <td class="groenvakjes">{{team.result.goalsHomeTeam}} </td>
        <td class="grotevanvakjes"> - </td>
       
-      <td class="grotevanvakjes">{{team.result.goalsAwayTeam}}</td>
+      <td class="groenvakjes">{{team.result.goalsAwayTeam}}</td>
       <td class="clubnamengespeeld" >{{team.awayTeamName}} </td>
    
       
