--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -92,6 +92,13 @@ img.slide1 {width: 100%; height:100%;}
 	background:none;
 }
 
+td.groenvakjes.ng-binding {
+       font-size: 10px;
+    color: #05DC05;
+    width: 24px;
+    padding: 0px;
+    text-align: center;}
+
 td.leegveld {
     width: 61%;
 }
