--- a/myApp/www/templates/competities.html
+++ b/myApp/www/templates/competities.html
@@ -21,6 +21,10 @@
     <i class="icon"><img class="icon-competition" ng-src="img/bundesliga.png"></i>
     Bundesliga
   </a>
+  <a class="item item-icon-left" href="#/app/portugaloptions">
+    <i class="icon"><img class="icon-competition" ng-src="img/ligaportugal.png"></i>
+    Primeira Liga
+  </a>
     <a class="item item-icon-left" href="#/app/dutchoptions">
     <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i>
     Eredivisie
