menu signup html

--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -33,7 +33,7 @@
          <p class="ion-ios-person"> Inloggen</p>
         </ion-item>
         <ion-item menu-close href="#/app/signup" hide-back-button="true" ng-hide="check.email||check.facebook" class="tabs-icon-top tabs-positive">
-         <p class="ion-person-add"> Aanmelden</p>
+         <p class="ion-person-add"> Registreren</p>
         </ion-item>
         <ion-item menu-close href="#/app/account" hide-back-button="true" ng-show="check.email||check.facebook">
          <p class="ion-ios-person"> Account</p>
