--- a/myApp/www/templates/signup.html
+++ b/myApp/www/templates/signup.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Aanmelden" hide-back-button="false">
+<ion-view view-title="Registreren" hide-back-button="false">
   	<ion-content>
   	<img class="sensatielogopaginas" src="img/sensatielogoo.jpg" alt="">
   	<h4 class="pagetitles" >Maak hier gratis uw account aan</h4>
