portugal, champions league

--- a/myApp/www/templates/competities.html
+++ b/myApp/www/templates/competities.html
@@ -33,6 +33,14 @@
     <i class="icon"><img class="icon-competition" ng-src="img/lique1.png"></i>
     Lique 1
   </a>
+  <a class="item item-icon-left" href="#/app/championsoptions">
+  <i class="icon"><img class="icon-competition" ng-src="img/champions.png"></i>
+  Champions League
+</a>
+<a class="item item-icon-left" href="#/app/euoptions">
+<i class="icon"><img class="icon-competition" ng-src="img/EU2016.png"></i>
+European Championships France 2016
+</a>
 </div>
   </ion-content>
 </ion-view>
