--- a/myApp/www/templates/teamtimed.html
+++ b/myApp/www/templates/teamtimed.html
@@ -5,30 +5,30 @@ Programma
   <ion-content>
     <ion-list>
 
-     <ion-item class="itemsbuiten" ng-repeat="team in isFinished">
-     
-      
-       
+     <ion-item class="itemsbuiten" ng-repeat="team in isTimed">
+
+
+
          <div style="overflow-x:auto;">
   <table>
-   
+
     <tr>
-    
+
       <td class="clubnamenkomend" > {{team.homeTeamName}}  - {{team.awayTeamName}}</td>
-     
-       
+
+
       <td class="datumgespeeld2">{{team.date}} </td>
-      
+
     </tr>
-  
-   
+
+
   </table>
 </div>
-         
-          
-		   
-		   
-		   
+
+
+
+
+
 		   </ion-item>
 
    </ion-list>
