--- a/myApp/www/templates/teaminplay.html
+++ b/myApp/www/templates/teaminplay.html
@@ -6,39 +6,39 @@ Live Wedstrijden
     <ion-list>
 
     <!--  <ion-item ng-repeat="team in isActive">-->
-      
-       
-        
-         
-          
-           
-      <ion-item class="itemsbuiten" ng-repeat="team in isFinished">
-     
-      
-       
+
+
+
+
+
+
+      <ion-item class="itemsbuiten" ng-repeat="team in isActive">
+
+
+
          <div style="overflow-x:auto;">
   <table>
-   
+
     <tr>
-    
+
       <td class="clubnamengespeeld" > {{team.homeTeamName}}</td>
       <td class="groenvakjes">{{team.result.goalsHomeTeam}} </td>
        <td class="grotevanvakjes"> - </td>
-      
+
       <td class="groenvakjes">{{team.result.goalsAwayTeam}}</td>
       <td class="clubnamengespeeld" >{{team.awayTeamName}} </td>
-   
-      
+
+
     </tr>
-  
-   
+
+
   </table>
 </div>
-         
-          
-		   
-		   
-		   
+
+
+
+
+
 		   </ion-item>
 
    </ion-list>
