EU, team finished, timed

--- a/myApp/www/templates/teamfinished.html
+++ b/myApp/www/templates/teamfinished.html
@@ -6,32 +6,33 @@ Gespeeld
    <ion-list class="ranglijst" >
 
      <ion-item class="itemsbuiten" ng-repeat="team in isFinished">
-     
-      
-       
+
+
+
          <div style="overflow-x:auto;">
   <table>
-   
+
     <tr>
-    
+      <td class="clubnamen" ><img class="logoclub" ng-src="{{team.crestURI}}"> {{t.teamName}}</td>
+
       <td class="clubnamengespeeld" > {{team.homeTeamName}}</td>
       <td class="grotevanvakjes">{{team.result.goalsHomeTeam}} </td>
        <td class="grotevanvakjesstreep"> - </td>
-      
+
       <td class="grotevanvakjes">{{team.result.goalsAwayTeam}}</td>
       <td class="clubnamengespeeld" >{{team.awayTeamName}} </td>
       <td class="datumgespeeld">{{team.date}} </td>
-      
+
     </tr>
-  
-   
+
+
   </table>
 </div>
-         
-          
-		   
-		   
-		   
+
+
+
+
+
 		   </ion-item>
 
    </ion-list>
