--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -17,7 +17,7 @@
   <ion-side-menu side="left">
   <ion-header-bar class="bar-stable">
     <p ng-show="check.email||check.facebook"  id="username" class="ion-person">{{ check.email }} {{ check.facebook }}</p>
-    <p ng-hide="check.email||check.facebook">Menu</p>
+    <p ng-hide="check.email||check.facebook" class="menutitel">Menu</p>
     </ion-header-bar>
     <ion-content>
       <ion-list >
