--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -98,9 +98,13 @@ img.slide1 {width: 100%; height:100%;}
 	background:none;
 }
 
+p.aantal {font-size: 11px;
+    margin: 0px 0 1px;}
+
 td.groenvakjes.ng-binding {
        font-size: 10px;
-    color: #05DC05;
+       color: #444;
+    background-color: rgba(115, 255, 115, 0.47);
     width: 24px;
     padding: 0px;
     text-align: center;}
@@ -181,9 +185,9 @@ margin-top: 31%;
 }
 
 .title-image{
-	  width: 22%;
-    margin-top: 10px;
-		max-width: 22%;
+	      width: 18%;
+    margin-top: 5px;
+    max-width: 22%;
 }
 .loading-container .loading{
 	background:none !important;
