--- a/myApp/www/templates/account.html
+++ b/myApp/www/templates/account.html
@@ -1,8 +1,8 @@
-<ion-view view-title="Account" hide-back-button="true">
+<ion-view  view-title="Account" >
   	<ion-content> <img class="sensatielogopaginas" src="img/sensatielogoo.jpg" alt="">
 	  
 		<span ng-show="check.email">
-	<h4 class="pagetitles" > Welkom {{ check.email }} !</h4>
+	<h4 class="pagetitles" > Welkom {{ check.email }}!</h4>
 		</span>
 
 <br>
