--- a/myApp/www/templates/voorkeur.html
+++ b/myApp/www/templates/voorkeur.html
@@ -1,14 +1,18 @@
 <ion-view view-title="Voorkeur">
   </ion-nav-buttons>
-  	<ion-content ng-controller="accountCrtl">
-    
+  	<ion-content ng-controller="VoorkeurCrtl">
+      <button  ng-click="reloadPage();">Reset</button>
+
+  <h1>{{authData.password.name}}</h1>
+
+  <div>
+
+    <h2>{{ authdata.competities.premiereleague }}</h2>
+    <ion-toggle ng-model="authdata.competities.premiereleague" ng-change="authdata.$save()" toggle-class="toggle-calm">Premiere League</ion-toggle>
 
 
-    
-  <div class="col-xs-4 text-center"  ng-repeat="user in $users">
-            
-    <h2>{{ user.name }}</h2>
-    
-    
+
+  <h1>{{data}}</h1>
+</div>
 	</ion-content>
 </ion-view>
