foto's en reload page

--- a/myApp/www/templates/teaminplay.html
+++ b/myApp/www/templates/teaminplay.html
@@ -8,7 +8,7 @@ Live Wedstrijden
     <!--  <ion-item ng-repeat="team in isActive">-->
 
 
-
+<img class="" src="img/ramosnoinfo.jpg">
 
 
 
@@ -43,5 +43,8 @@ Live Wedstrijden
 
    </ion-list>
   </ion-content>
+  <ion-footer-bar align-title="left" class="bar-assertive">
+  <h1 class="title" style="text-align: center;" > Wedstrijden beschikbaar vanaf: September</h1>
+</ion-footer-bar>
 </ion-view>
 
