--- a/myApp/www/templates/teamtimed.html
+++ b/myApp/www/templates/teamtimed.html
@@ -3,9 +3,11 @@
 Programma
     </ion-nav-title>
   <ion-content>
+    <img class="" src="img/ramosnoinfocom.jpg">
     <ion-list>
 
      <ion-item class="itemsbuiten" ng-repeat="team in isTimed">
+
 
 
 
@@ -32,5 +34,8 @@ Programma
 
    </ion-list>
   </ion-content>
+    <ion-footer-bar align-title="left" class="bar-assertive">
+  <h1 class="title" style="text-align: center;" > Competities weer vanaf september</h1>
+</ion-footer-bar>
 </ion-view>
 
