--- a/myApp/www/templates/competitieinlog.html
+++ b/myApp/www/templates/competitieinlog.html
@@ -1,43 +1,43 @@
 <ion-view view-title="Competities">
-  <ion-content >
+  <ion-content ng-controller="VoorkeurCrtl">
     <div class="list">
 
-<a  class="item item-icon-left" href="#/app/englandoptions">
+<a ng-show="authdata.competities.premiereleague" class="item item-icon-left" href="#/app/englandoptions">
     <i class="icon"><img class="icon-competition" ng-src="img/premierleague.png"></i>
     Premier League
   </a>
 
-  <a  class="item item-icon-left item-icon-left" href="#/app/spainoptions">
+  <a ng-show="authdata.competities.primeradivision" class="item item-icon-left item-icon-left" href="#/app/spainoptions">
     <i class="icon"><img class="icon-competition" ng-src="img/ligabvva.png"></i>
     Primera División
   </a>
 
-  <a  class="item item-icon-left" href="#/app/italyoptions">
+  <a ng-show="authdata.competities.seria" class="item item-icon-left" href="#/app/italyoptions">
     <i class="icon"><img class="icon-competition" ng-src="img/seriea.png"></i>
     Serie A
   </a>
 
-  <a  class="item item-icon-left" href="#/app/germanyoptions">
+  <a ng-show="authdata.competities.bundesliga" class="item item-icon-left" href="#/app/germanyoptions">
     <i class="icon"><img class="icon-competition" ng-src="img/bundesliga.png"></i>
     Bundesliga
   </a>
-  <a  class="item item-icon-left" href="#/app/portugaloptions">
+  <a ng-show="authdata.competities.primeira" class="item item-icon-left" href="#/app/portugaloptions">
     <i class="icon"><img class="icon-competition" ng-src="img/ligaportugal.png"></i>
     Primeira Liga
   </a>
-    <a  class="item item-icon-left" href="#/app/dutchoptions">
+    <a ng-show="authdata.competities.eredivisie" class="item item-icon-left" href="#/app/dutchoptions">
     <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i>
     Eredivisie
   </a>
-    <a  class="item item-icon-left" href="#/app/franceoptions">
+    <a ng-show="authdata.competities.lique1" class="item item-icon-left" href="#/app/franceoptions">
     <i class="icon"><img class="icon-competition" ng-src="img/lique1.png"></i>
     Lique 1
   </a>
-  <a  class="item item-icon-left" href="#/app/championsoptions">
+  <a ng-show="authdata.competities.champions" class="item item-icon-left" href="#/app/championsoptions">
   <i class="icon"><img class="icon-competition" ng-src="img/champions.png"></i>
   Champions League
 </a>
-<a  class="item item-icon-left" href="#/app/euoptions">
+<a ng-show="authdata.competities.ek" class="item item-icon-left" href="#/app/euoptions">
 <i class="icon"><img class="icon-competition" ng-src="img/EU2016.png"></i>
 European Championships France 2016
 </a>
