--- a/myApp/www/templates/home.html
+++ b/myApp/www/templates/home.html
@@ -6,7 +6,7 @@
          </ion-slide>
          <ion-slide>
                 <img class="slide1" src="img/diego costa.jpg">
-            
+
          </ion-slide>
          <ion-slide>
              <img class="slide1" src="img/city.jpg">
@@ -17,6 +17,6 @@
        </ion-slide-box>
 </ion-content>
 <ion-footer-bar align-title="left" class="bar-assertive">
-  <h1 class="title" style="text-align: center;" > &reg; WaVe Media</h1>
+  <h1 class="title" style="text-align: center;" > &copy; WaVe Media</h1>
 </ion-footer-bar>
 </ion-view>
