--- a/myApp/www/templates/teaminplay.html
+++ b/myApp/www/templates/teaminplay.html
@@ -8,7 +8,7 @@ Live Wedstrijden
     <!--  <ion-item ng-repeat="team in isActive">-->
 
 
-<img class="" src="img/ramosnoinfo.jpg">
+<img class="ramos" src="img/ramosnoinfo.jpg">
 
 
 
