--- a/myApp/www/templates/teamtimed.html
+++ b/myApp/www/templates/teamtimed.html
@@ -3,7 +3,7 @@
 Programma
     </ion-nav-title>
   <ion-content>
-    <img class="" src="img/ramosnoinfocom.jpg">
+    <img class="ramos" src="img/ramosnoinfocom.jpg">
     <ion-list>
 
      <ion-item class="itemsbuiten" ng-repeat="team in isTimed">
